--- a/addtask.html
+++ b/addtask.html
@@ -24,31 +24,45 @@
 
       <div class="left">
         <label class="font20" for="title">Title</label>
-        <input id="title-input" required class="w-422 h-51 font20 pad-13-21 custom-border" type="text"
+        <input id="title-input" required class="w-422 h-51 font20 pad-13-21 custom-border ol-none" type="text"
           placeholder="Enter a title">
 
         <label class="font20" for="description">Description</label>
-        <textarea required class="w-422 font20 pad-18-21 custom-border" name="description" id="description-input"
-          cols="30" rows="10" placeholder="Enter a Description"></textarea>
+        <textarea required class="w-422 font20 pad-18-21 custom-border ol-none" name="description"
+          id="description-input" cols="30" rows="10" placeholder="Enter a Description"></textarea>
 
         <label class="font20" for="category">Category</label>
         <div class="category-container font20">
-          <div class="category-input">
-            <span>Add new Category</span>
+          <div class="category-input" id="category-input">
+            <span>Add new category</span>
           </div>
-          <div class="category-button-container">
-            <button><img src="./img/arrow_down.png"></button>
+          <div class="category-button-container" id="category-button">
+            <button type="button"><img src="./img/arrow_down.png"></button>
           </div>
+        </div>
+
+        <div class="categorys">
+          <ul id="renderCategorys">
+            <li>Test<svg xmlns="http://www.w3.org/2000/svg" width="20" height="21" viewBox="0 0 20 21" fill="none">
+                <circle cx="10" cy="10.5" r="9" fill="#0038FF" stroke="white" stroke-width="2" />
+              </svg> </li>
+          </ul>
         </div>
 
         <label class="font20" for="assigned">Assigned to</label>
         <div class="assigned-container font20">
-          <div class="assigned-input">
-            <span>Select contacts to assign</span>
+          <div class="assigned-input" id="assigned-input">
+            <span onclick="changeToInput('assigned-input', 'assigned-button')">Select contacts to assign</span>
           </div>
-          <div class="assigned-button-container">
-            <button><img src="./img/arrow_down.png"></button>
+          <div class="assigned-button-container" id="assigned-button">
+            <button type="button" onclick="changeToInput('assigned-input', 'assigned-button')"><img src="./img/arrow_down.png"></button>
           </div>
+        </div>
+
+        <div class="contacts">
+          <ul id="renderContacts">
+            <li>Max Mustermann <img src="./img/checkbox.png"></li>
+          </ul>
         </div>
 
       </div>
@@ -59,7 +73,7 @@
       </div>
       <div class="right">
         <label required class="font20" for="date">Due date</label>
-        <input class="w-422 h-51 font20 pad-18-21 custom-border" type="date" placeholder="dd/mm/yyyy">
+        <input class="w-422 h-51 font20 pad-18-21 custom-border ol-none" type="date" placeholder="dd/mm/yyyy">
 
         <label class="font20" for="prio">Prio</label>
         <div class="prio-btn">
@@ -76,7 +90,7 @@
 
 
         <label class="font20" for="subtasks">Subtasks</label>
-        <input class="subtask-input w-422 h-51 custom-border pad-18-21 font20" type="text"
+        <input class="subtask-input w-422 h-51 custom-border pad-18-21 font20 ol-none" type="text"
           placeholder="Add new subtask">
 
 
@@ -88,8 +102,8 @@
                 d="M12.0174 12.1705L17.2604 17.4135M6.77441 17.4135L12.0174 12.1705L6.77441 17.4135ZM17.2604 6.92749L12.0164 12.1705L17.2604 6.92749ZM12.0164 12.1705L6.77441 6.92749L12.0164 12.1705Z"
                 stroke="#2A3647" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
             </svg></button>
-          <button type="submit" class="font20 pad-18-15 create-btn">Create Task <svg xmlns="http://www.w3.org/2000/svg"
-              width="25" height="25" viewBox="0 0 25 25" fill="none">
+          <button onclick="getAssignedContacts()" type="submit" class="font20 pad-18-15 create-btn">Create Task <svg
+              xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25" fill="none">
               <path d="M4.0166 12.1704L10.0166 18.1704L20.0166 6.17041" stroke="white" stroke-width="2"
                 stroke-linecap="round" stroke-linejoin="round" />
             </svg></button>
