--- a/addtask.html
+++ b/addtask.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE text/html>
 <html lang="en">
 
 <head>
@@ -9,14 +9,15 @@
   <link rel="stylesheet" href="./styles/bootstrap.css">
   <link rel="stylesheet" href="./styles/taskstyle.css">
   <link rel="stylesheet" href="./styles/styleSidebar.css">
+  <link rel="stylesheet" href="./styles/coloris.min.css"/>
   <script src="./scripts/sidebar.js"></script>
   <script src="./scripts/bootstrap.js"></script>
   <script src="./scripts/addtask.js"></script>
+  
 </head>
 
 <body onload="includeHTML(); init()">
   <div w3-include-html="./templates/sidebar.html"></div>
-
   <div class="add-task-section">
     <h1 class="font61">Add Task</h1>
 
@@ -112,4 +113,5 @@
 
     </form>
   </div>
+  <script src="./scripts/coloris.min.js"></script>
 </body>
