--- a/addtask.html
+++ b/addtask.html
@@ -74,7 +74,7 @@
       </div>
       <div class="right">
         <label required class="font20" for="date">Due date</label>
-        <input class="w-422 h-51 font20 pad-18-21 custom-border ol-none" type="date" placeholder="dd/mm/yyyy">
+        <input id="task-date" class="w-422 h-51 font20 pad-18-21 custom-border ol-none" type="date" placeholder="dd/mm/yyyy">
 
         <label class="font20" for="prio">Prio</label>
         <div class="prio-btn">
@@ -91,11 +91,25 @@
 
 
         <label class="font20" for="subtasks">Subtasks</label>
-        <input class="subtask-input w-422 h-51 custom-border pad-18-21 font20 ol-none" type="text"
-          placeholder="Add new subtask">
+       
 
 
+          <div class="subtasks-container font20 w-422 h-51 custom-border pad-18-21">
+            <div class="subtasks-input" id="subtasks-input">
+              <input onclick="changeToInput('subtasks-input', 'subtasks-button')" class="subtask-input  ol-none" type="text"
+              placeholder="Add new subtask">
+            </div>
+            <div class="subtasks-button-container" id="subtasks-button">
+              <button type="button"><img src="./img/plus_icon.png"></button>
+            </div>
+          </div>
 
+
+          <div class="geneneratedSubtasks" id="subtask-content">
+            TEST
+          </div>
+
+          
         <div class="form-btn">
           <button type="reset" class="font20 pad-18-10 clear-btn">Clear <svg xmlns="http://www.w3.org/2000/svg"
               width="25" height="25" viewBox="0 0 25 25" fill="none">
@@ -113,5 +127,5 @@
 
     </form>
   </div>
-  <script src="./scripts/coloris.min.js"></script>
+  <script type="text/javascript" src="./scripts/coloris.min.js"></script>
 </body>
