adding id to form for .reset() to empty inputfields

--- a/contacts.html
+++ b/contacts.html
@@ -123,7 +123,7 @@
         <div class="dialog__createRightImg">
           <img src="./img/create_contact_frame.svg" alt="" srcset="" />
         </div>
-        <form class="dialog__createRightForm" onsubmit="return false;">
+        <form id="createContactForm" class="dialog__createRightForm" onsubmit="return false;">
           <input
             type="text"
             placeholder="Name"
