--- a/addtask.html
+++ b/addtask.html
@@ -37,10 +37,23 @@
           <div class="category-input" id="category-input">
             <span>Add new category</span>
           </div>
+
           <div class="category-button-container" id="category-button">
             <button type="button"><img src="./img/arrow_down.png"></button>
           </div>
         </div>
+
+        <div class="hidden-input-container w-422 custom-border">
+          <input class="hiddenInput font20 ol-none" type="text" placeholder="Add new Category">
+          <div class="generated-Btn-Container">
+            <input class="coloris instance2 colorpicker" type="text" data-coloris>
+            <button onclick="clearInput(this)" type="button"><img  src="./img/cancel_icon.png"></button>
+            <svg xmlns="http://www.w3.org/2000/svg" width="2" height="31" viewBox="0 0 2 31" fill="none">
+            <path d="M1 0V31" stroke="#D1D1D1"/>
+            </svg>
+            <button onclick="addNewCategory()" type="button"><img src="./img/check_black_icon.png"></button>
+            </div>
+        </div> 
 
         <div class="categorys">
           <ul id="renderCategorys">
@@ -55,6 +68,7 @@
           <div class="assigned-input" id="assigned-input">
             <span onclick="changeToInput('assigned-input', 'assigned-button')">Select contacts to assign</span>
           </div>
+
           <div class="assigned-button-container" id="assigned-button">
             <button type="button" onclick="changeToInput('assigned-input', 'assigned-button')"><img src="./img/arrow_down.png"></button>
           </div>
