--- a/addtask.html
+++ b/addtask.html
@@ -25,17 +25,17 @@
 
       <div class="left">
         <label class="font20" for="title">Title</label>
-        <input id="title-input" required class="w-422 h-51 font20 pad-13-21 custom-border ol-none" type="text"
+        <input id="title-input" required class="w-422 h-51 font20 pad-13-21 custom-border ol-none cursor-p" type="text"
           placeholder="Enter a title">
 
         <label class="font20" for="description">Description</label>
-        <textarea required class="w-422 font20 pad-18-21 custom-border ol-none" name="description"
+        <textarea required class="w-422 font20 pad-18-21 custom-border ol-none cursor-p" name="description"
           id="description-input" cols="30" rows="10" placeholder="Enter a Description"></textarea>
 
         <label class="font20" for="category">Category</label>
-        <div class="category-container font20">
-          <div class="category-input" id="category-input">
-            <span>Add new category</span>
+        <div onclick="toggleCatgoryMenu()" class="category-container font20" id="category-container">
+          <div class="category-input cursor-p" id="category-input">
+            <span>Select task category</span>
           </div>
 
           <div class="category-button-container" id="category-button">
@@ -43,7 +43,7 @@
           </div>
         </div>
 
-        <div class="hidden-input-container w-422 custom-border">
+        <div class="hidden-input-container w-422 custom-border d-none">
           <input class="hiddenInput font20 ol-none" type="text" placeholder="Add new Category">
           <div class="generated-Btn-Container">
             <input class="coloris instance2 colorpicker" type="text" data-coloris>
@@ -56,7 +56,7 @@
         </div> 
 
         <div class="categorys">
-          <ul id="renderCategorys">
+          <ul id="renderCategorys" class="font20 d-none">
             <li>Test<svg xmlns="http://www.w3.org/2000/svg" width="20" height="21" viewBox="0 0 20 21" fill="none">
                 <circle cx="10" cy="10.5" r="9" fill="#0038FF" stroke="white" stroke-width="2" />
               </svg> </li>
@@ -64,7 +64,7 @@
         </div>
 
         <label class="font20" for="assigned">Assigned to</label>
-        <div class="assigned-container font20">
+        <div class="assigned-container font20 cursor-p">
           <div class="assigned-input" id="assigned-input">
             <span onclick="changeToInput('assigned-input', 'assigned-button')">Select contacts to assign</span>
           </div>
@@ -88,7 +88,7 @@
       </div>
       <div class="right">
         <label required class="font20" for="date">Due date</label>
-        <input id="task-date" class="w-422 h-51 font20 pad-18-21 custom-border ol-none" type="date" placeholder="dd/mm/yyyy">
+        <input id="task-date" class="w-422 h-51 font20 pad-18-21 custom-border ol-none cursor-p" type="date" placeholder="dd/mm/yyyy">
 
         <label class="font20" for="prio">Prio</label>
         <div class="prio-btn">
@@ -119,8 +119,7 @@
           </div>
 
 
-          <div class="geneneratedSubtasks" id="subtask-content">
-            TEST
+          <div class="geneneratedSubtasks cursor-p font20" id="subtask-content">
           </div>
 
           
