added form-btn margin calculation and mor functionality to addSubtasks

--- a/addtask.html
+++ b/addtask.html
@@ -123,8 +123,8 @@
           </div>
 
           
-        <div class="form-btn">
-          <button type="reset" class="font20 pad-18-10 clear-btn">Clear <svg xmlns="http://www.w3.org/2000/svg"
+        <div class="form-btn" id="form-btn-container">
+          <button onclick="clearAll()" type="reset" class="font20 pad-18-10 clear-btn">Clear <svg xmlns="http://www.w3.org/2000/svg"
               width="25" height="25" viewBox="0 0 25 25" fill="none">
               <path id="cancel-icon"
                 d="M12.0174 12.1705L17.2604 17.4135M6.77441 17.4135L12.0174 12.1705L6.77441 17.4135ZM17.2604 6.92749L12.0164 12.1705L17.2604 6.92749ZM12.0164 12.1705L6.77441 6.92749L12.0164 12.1705Z"
