--- a/board.html
+++ b/board.html
@@ -60,7 +60,7 @@
             </div>
             <div class="d-flex align-items-center">
                 <div class="border ps-3 py-1 findTaskBtn d-flex justify-content-between align-items-center">
-                    <input placeholder="Find task" class="inputfindTask border-end" type="text">
+                    <input data-search placeholder="Find task" class="inputfindTask border-end" type="text">
                     <div class="d-flex justify-content-center align-items-center px-3 cursorPointer">
                         <img src="./img/search2.svg" alt="search">
                     </div>
@@ -76,25 +76,25 @@
                     <div class="bold">To do</div>
                     <div class="cursorPointer"><img src="./img/plusButton.svg" alt="plus"></div>
                 </div>
-                <div ondrop="moveTo('in progress')" ondragover="allowDrop(event)" id="todo"></div>
+                <div ondrop="moveTo('todo')" ondragover="allowDrop(event)" id="todo"></div>
             </div>
             <div>
                 <div class="d-flex justify-content-between">
                     <div class="bold">In Progress</div>
                     <div class="cursorPointer"><img src="./img/plusButton.svg" alt="plus"></div>
                 </div>
-                <div ondrop="moveTo('todo')" ondragover="allowDrop(event)" id="inProgress"></div>
+                <div ondrop="moveTo('in progress')" ondragover="allowDrop(event)" id="inProgress"></div>
             </div>
             <div>
                 <div class="d-flex justify-content-between">
                     <div class="bold">Awaiting Feedback</div>
                     <div class="cursorPointer"><img src="./img/plusButton.svg" alt="plus"></div>
                 </div>
-                <div id="awaitingFeedback"></div>
+                <div ondrop="moveTo('awaiting feedback')" ondragover="allowDrop(event)" id="awaitingFeedback"></div>
             </div>
             <div>
                 <div class="bold">Done</div>
-                <div id="done"></div>
+                <div ondrop="moveTo('done')" ondragover="allowDrop(event)" id="done"></div>
             </div>
         </div>
     </div>
