popUp for each task

--- a/board.html
+++ b/board.html
@@ -53,6 +53,7 @@
 </head>
 <body onload="includeHTML(); initBoard()">
     <div w3-include-html="./templates/sidebar.html"></div>
+    <div id="popUpBoard" class="dNone popUpBoardBackground d-flex justify-content-center align-items-center"></div>
     <div class="parentDiv paddingRight50Px">
         <div class="d-flex justify-content-between mb-5">
             <div class="size3Em bold">
