--- a/addtask.html
+++ b/addtask.html
@@ -9,11 +9,11 @@
   <link rel="stylesheet" href="./styles/bootstrap.css">
   <link rel="stylesheet" href="./styles/taskstyle.css">
   <link rel="stylesheet" href="./styles/styleSidebar.css">
-  <link rel="stylesheet" href="./styles/coloris.min.css"/>
+  <link rel="stylesheet" href="./styles/coloris.min.css" />
   <script src="./scripts/sidebar.js"></script>
   <script src="./scripts/bootstrap.js"></script>
   <script src="./scripts/addtask.js"></script>
-  
+
 </head>
 
 <body onload="includeHTML(); init()">
@@ -65,7 +65,6 @@
 
         <div class="contacts font20 d-none" id="contact-container">
           <ul id="renderContacts">
-            <li>Max Mustermann <img src="./img/checkbox.png"></li>
           </ul>
         </div>
 
@@ -77,7 +76,8 @@
       </div>
       <div class="right">
         <label required class="font20" for="date">Due date</label>
-        <input id="task-date" class="w-422 h-51 font20 pad-18-21 custom-border ol-none cursor-p" type="date" placeholder="dd/mm/yyyy">
+        <input id="task-date" class="w-422 h-51 font20 pad-18-21 custom-border ol-none cursor-p" type="date"
+          placeholder="dd/mm/yyyy">
 
         <label class="font20" for="prio">Prio</label>
         <div class="prio-btn">
@@ -94,27 +94,27 @@
 
 
         <label class="font20" for="subtasks">Subtasks</label>
-       
 
 
-          <div class="subtasks-container font20 w-422 h-51 custom-border pad-18-21">
-            <div class="subtasks-input" id="subtasks-input">
-              <input onclick="changeToInput('subtasks-input', 'subtasks-button')" class="subtask-input  ol-none" type="text"
-              placeholder="Add new subtask">
-            </div>
-            <div class="subtasks-button-container" id="subtasks-button">
-              <button type="button"><img src="./img/plus_icon.png"></button>
-            </div>
+
+        <div class="subtasks-container font20 w-422 h-51 custom-border pad-18-21">
+          <div class="subtasks-input" id="subtasks-input">
+            <input onclick="changeToInput('subtasks-input', 'subtasks-button')" class="subtask-input  ol-none"
+              type="text" placeholder="Add new subtask">
           </div>
-
-
-          <div class="geneneratedSubtasks cursor-p font20" id="subtask-content">
+          <div class="subtasks-button-container" id="subtasks-button">
+            <button type="button"><img src="./img/plus_icon.png"></button>
           </div>
+        </div>
 
-          
+
+        <div class="geneneratedSubtasks cursor-p font20" id="subtask-content">
+        </div>
+
+
         <div class="form-btn" id="form-btn-container">
-          <button onclick="clearAll()" type="reset" class="font20 pad-18-10 clear-btn">Clear <svg xmlns="http://www.w3.org/2000/svg"
-              width="25" height="25" viewBox="0 0 25 25" fill="none">
+          <button onclick="clearAll()" type="reset" class="font20 pad-18-10 clear-btn">Clear <svg
+              xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25" fill="none">
               <path id="cancel-icon"
                 d="M12.0174 12.1705L17.2604 17.4135M6.77441 17.4135L12.0174 12.1705L6.77441 17.4135ZM17.2604 6.92749L12.0164 12.1705L17.2604 6.92749ZM12.0164 12.1705L6.77441 6.92749L12.0164 12.1705Z"
                 stroke="#2A3647" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
