--- a/board.html
+++ b/board.html
@@ -61,7 +61,7 @@
             </div>
             <div class="d-flex align-items-center">
                 <div class="border ps-3 py-1 findTaskBtn d-flex justify-content-between align-items-center">
-                    <input id="boardInput" data-search placeholder="Find task" class="inputfindTask border-end" type="text">
+                    <input onkeyup="searchTask()" id="boardInput" data-search placeholder="Find task" class="inputfindTask border-end" type="text">
                     <div class="d-flex justify-content-center align-items-center px-3 cursorPointer">
                         <img src="./img/search2.svg" alt="search">
                     </div>
