added Error messeges in category input

--- a/addtask.html
+++ b/addtask.html
@@ -42,8 +42,6 @@
             <button type="button"><img src="./img/arrow_down.png"></button>
           </div>
         </div>
-
-
         <div class="categorys">
           <ul id="renderCategorys" class="font20 d-none">
             <li>Test<svg xmlns="http://www.w3.org/2000/svg" width="20" height="21" viewBox="0 0 20 21" fill="none">
@@ -51,6 +49,9 @@
               </svg> </li>
           </ul>
         </div>
+
+        <div class="d-none" id="hidden-error"><p class="font12 hidden-error">You need to pick a color</p></div>
+
 
         <label class="font20" for="assigned">Assigned to</label>
         <div onclick="toggleAssigndMenu()" class="assigned-container font20 cursor-p" id="assigned-container">
