--- a/board.html
+++ b/board.html
@@ -37,7 +37,7 @@
     <!-- FAVICON END -->
     <link rel="stylesheet" href="./styles/bootstrap.css" />
     <link rel="stylesheet" href="./styles/fonts.css" />
-    <link rel="stylesheet" href="./styles/style.css" />
+    <!-- <link rel="stylesheet" href="./styles/style.css" /> -->
     <link rel="stylesheet" href="./styles/styleSidebar.css">
     <link rel="stylesheet" href="./styles/summary.css">
     <link rel="stylesheet" href="./styles/board.css"> 
@@ -47,7 +47,7 @@
     <script src="./scripts/sidebar.js"></script>
     <script src="./scripts/bootstrap.js"></script>
 
-    <link rel="stylesheet" href="/styles/index.css" />
+    <!-- <link rel="stylesheet" href="/styles/index.css" /> -->
 
     <title>Board</title>
 
