--- a/board.html
+++ b/board.html
@@ -46,6 +46,7 @@
     <script src="./scripts/summary.js"></script>
     <script src="./scripts/sidebar.js"></script>
     <script src="./scripts/bootstrap.js"></script>
+    <script src="./scripts/storage.js"></script>
 
     <!-- <link rel="stylesheet" href="/styles/index.css" /> -->
 
@@ -100,9 +101,9 @@
             </div>
         </div>
     </div>
-    <!-- <dialog modal w3-include-html="./templates/addTaskTemplate.html" id="boardOpenDialog" open>
-    </dialog> -->
-    <div w3-include-html="./templates/addTaskTemplate.html">
-    </div>
+    <dialog modal w3-include-html="./templates/addTaskTemplate.html" id="boardOpenDialog">
+    </dialog>
+    <!-- <div w3-include-html="./templates/addTaskTemplate.html">
+    </div> -->
 </body>
 </html>
