--- a/addtask.html
+++ b/addtask.html
@@ -13,6 +13,7 @@
   <script src="./scripts/sidebar.js"></script>
   <script src="./scripts/bootstrap.js"></script>
   <script src="./scripts/addtask.js"></script>
+  <script src="./scripts/storage.js"></script>
 
 </head>
 
