--- a/board.html
+++ b/board.html
@@ -42,6 +42,7 @@
     <link rel="stylesheet" href="./styles/summary.css">
     <link rel="stylesheet" href="./styles/board.css"> 
     <link rel="stylesheet" href="./styles/taskstyle.css">
+    <!-- <script src="./scripts/contacts.js"></script> -->
     <script src="./scripts/board.js"></script> 
     <script src="./scripts/summary.js"></script>
     <script src="./scripts/sidebar.js"></script>
