added storage to addTask -> push addTask into storage as an object

--- a/addtask.html
+++ b/addtask.html
@@ -78,7 +78,7 @@
       </div>
       <div class="right">
         <label required class="font20" for="date">Due date</label>
-        <input id="task-date" class="w-422 h-51 font20 pad-18-21 custom-border ol-none cursor-p" type="date"
+        <input id="task-date" class="w-422 h-51 font20 pad-18-21 custom-border ol-none cursor-p" type="date" min=""
           placeholder="dd/mm/yyyy">
 
         <label class="font20" for="prio">Prio</label>
