added remote storage

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             >
           </div>
           <div class="login-btn-container">
-            <button class="signup-btn">Log in</button>
+            <button class="signup-btn" onclick="login();">Log in</button>
             <button
               class="signup-btn guest-login-btn"
               type="button"
