--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
     <!-- FAVICON END -->
     <link rel="stylesheet" href="./styles/bootstrap.css" />
     <link rel="stylesheet" href="./styles/fonts.css" />
-    <link rel="stylesheet" href="./styles/style.css" />
     <script src="./scripts/sidebar.js"></script>
     <script src="./scripts/bootstrap.js"></script>
     <script src="./scripts/storage.js"></script>
@@ -106,7 +105,7 @@
             >
           </div>
           <div class="login-btn-container">
-            <button class="signup-btn">Log in</button>
+            <button class="signup-btn" onclick="login();">Log in</button>
             <button
               class="signup-btn guest-login-btn"
               type="button"
