--- a/addtask.html
+++ b/addtask.html
@@ -76,7 +76,7 @@
         </svg>
       </div>
       <div class="right">
-        <label required class="font20" for="date">Due date</label>
+        <label required class="font20 date-label" for="date">Due date</label>
         <input id="task-date" class="w-422 h-51 font20 pad-18-21 custom-border ol-none cursor-p" type="date" min=""
           placeholder="dd/mm/yyyy">
 
